# dbt-terraform-jobs

./: .gitignore  .pre-commit-config.yaml  README.md  dbt_jobs.yml  dbt_project.yml  profiles.yml  pyproject.toml  workings.ipynb
.github/workflows/: cd_pipeline.yml  ci_pipeline.yml
models/staging/public_datasets/: _public_datasets__sources.yml  stg_public_datasets__bitcoin_blocks.sql
terraform/: backend.tf  connection.tf  environments.tf  jobs.tf  projects.tf  providers.tf  repository.tf  vars.tf
